--- a/index.html
+++ b/index.html
@@ -4,11 +4,13 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./src/style/style.scss" />
+    <link rel="stylesheet" href="./src/style/main.scss" />
     <script src="./src/javascript/app.js" defer></script>
-    <title>Vacanta</title>
+    <title>Vacantion</title>
   </head>
   <body>
-    <h3>poate am noroc</h3>
+    <section class="logo">
+      <h2>this is a logo</h2>
+    </section>
   </body>
 </html>
