--- a/index.html
+++ b/index.html
@@ -12,5 +12,6 @@
     <section class="logo">
       <h2>this is a logo</h2>
     </section>
+    <navigation class="navigation"></navigation>
   </body>
 </html>
