--- a/index.html
+++ b/index.html
@@ -10,8 +10,16 @@
   </head>
   <body>
     <section class="logo">
-      <h2>this is a logo</h2>
+      <img src="./images/logo--3.svg" alt="road trip logo" />
     </section>
-    <navigation class="navigation"></navigation>
+    <navigation class="navigation">
+      <a href="#" class="button-link">offerts</a>
+      <a href="#" class="button-link">location</a>
+      <a href="#" class="button-link">title</a>
+      <a href="#" class="button-link">about</a>
+      <a href="#" class="button-link">contact</a>
+    </navigation>
+    <section class="welcome"></section>
+    <section class="about"></section>
   </body>
 </html>
