trip text changes v1

--- a/index.html
+++ b/index.html
@@ -20,6 +20,31 @@
       <a href="#" class="button-link">contact</a>
     </navigation>
     <section class="welcome"></section>
-    <section class="about"></section>
+    <section class="about">
+      <div class="about__adv">
+        <h1 class="header header__big center">
+          Road trips, fun, and good mood
+        </h1>
+        <p class="quottes center">
+          "Lorem ipsum, dolor sit amet consectetur adipisicing elit. Praesentium
+          omnis velit pariatur atque dolorem quibusdam animi, nihil, incidunt
+          excepturi voluptatem error dolor vitae odio? Est perferendis
+          perspiciatis ipsam fuga autem?"
+        </p>
+        <p class="center margin-y">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias
+          libero quidem harum, at vel nulla voluptatem aliquam perspiciatis
+          fugit odit incidunt corporis excepturi voluptate magnam eum? Ullam ut,
+          ducimus nemo aspernatur voluptate vel culpa! Cumque, sit? Velit autem
+          molestiae pariatur rerum quae qui ipsum ratione tempore, error quod
+          obcaecati ea molestias voluptas perferendis magni, voluptatibus, illo
+          consequuntur eius quis culpa!
+        </p>
+        <h2 class="header header__normal center">
+          Life si short, but memories are limitless
+        </h2>
+        <h3 class="header header__hand center">Make everyday count!</h3>
+      </div>
+    </section>
   </body>
 </html>
