trip wallpaper change v2

--- a/index.html
+++ b/index.html
@@ -19,7 +19,17 @@
       <a href="#" class="button-link">about</a>
       <a href="#" class="button-link">contact</a>
     </navigation>
-    <section class="welcome"></section>
+    <section class="welcome">
+      <div class="welcome__box">
+        <h3 class="header header__hand center">Live, love + enjoy life</h3>
+        <h2 class="header header__small center">
+          mytrip.com - made travel for extraordinary life experiences
+        </h2>
+        <a href="https://bennettfeely.com/clippy/" class="button-cta"
+          >Start booking</a
+        >
+      </div>
+    </section>
     <section class="about">
       <div class="about__adv">
         <h1 class="header header__big center">
