--- a/index.html
+++ b/index.html
@@ -55,6 +55,35 @@
         </h2>
         <h3 class="header header__hand center">Make everyday count!</h3>
       </div>
+      <div class="about__box">
+        <div class="about__box__text">
+          <h2 class="header header__normal">
+            Lorem ipsum dolor sit amet consectetur.
+          </h2>
+          <p class="margin-y">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis,
+            nobis amet! Labore ex quam quod voluptatibus aliquam eius. Quae cum
+            consectetur tempora quam sapiente. Ab accusamus itaque deleniti
+            provident velit at expedita inventore laborum quaerat.
+          </p>
+          <p class="margin-y">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse quod
+            repellat animi dolore laborum praesentium facilis neque hic
+            consequatur et harum optio fugiat maiores in totam ex, quisquam
+            officia similique eum, consectetur doloremque! Vitae, sit
+            voluptatibus. Illum voluptate doloribus labore alias iste.
+          </p>
+          <a href="https://bennettfeely.com/clippy/" class="button-cta"
+            >Read more</a
+          >
+        </div>
+        <div class="about__box__picture">
+          <div class="about__box__picture__img">
+            <img src="./images/wallpaper--4.jpg" alt="nature" />
+          </div>
+        </div>
+      </div>
     </section>
+    <section class="del"></section>
   </body>
 </html>
