--- a/index.html
+++ b/index.html
@@ -78,12 +78,42 @@
           >
         </div>
         <div class="about__box__picture">
-          <div class="about__box__picture__img">
+          <div class="picture-onPage">
             <img src="./images/wallpaper--4.jpg" alt="nature" />
           </div>
         </div>
       </div>
     </section>
-    <section class="del"></section>
+    <section class="trip"></section>
+    <div class="example">
+      <div class="example__picture">
+        <div class="picture-onPage">
+          <img src="./images/wallpaper--6.jpg" alt="nature" />
+        </div>
+      </div>
+      <div class="example__text">
+        <h2 class="header header__normal">
+          Lorem ipsum dolor sit amet consectetur.
+        </h2>
+        <p class="margin-y">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis,
+          nobis amet! Labore ex quam quod voluptatibus aliquam eius. Quae cum
+          consectetur tempora quam sapiente. Ab accusamus itaque deleniti
+          provident velit at expedita inventore laborum quaerat.
+        </p>
+        <a href="https://bennettfeely.com/clippy/" class="button-cta"
+          >Read more</a
+        >
+      </div>
+    </div>
+    <div class="reviews">
+      <h3 class="header header__hand center">Happy travelers</h3>
+      <p class="center margin-y">
+        "We've seen amazing results already. Needless to say we are extremely
+        satisfied with the results. Travel is worth much more than I paid. I
+        could probably go into sales for you."
+      </p>
+      <h2 class="header header__small">- Ellissa L.</h2>
+    </div>
   </body>
 </html>
