--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
       <a href="#" class="button-link">about</a>
       <a href="#" class="button-link">contact</a>
     </navigation>
-    <section class="welcome">
-      <div class="welcome__box">
+    <section class="welcome bkg-pic">
+      <div class="small-box">
         <h3 class="header header__hand center">Live, love + enjoy life</h3>
         <h2 class="header header__small center">
           mytrip.com - made travel for extraordinary life experiences
@@ -84,7 +84,18 @@
         </div>
       </div>
     </section>
-    <section class="trip"></section>
+    <section class="trip bkg-pic">
+      <h1 class="header header__big center text-white">
+        250 + mindblowing experiences to add to your bucket list
+      </h1>
+      <p class="center text-white margin-y">
+        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sit, eum dicta
+        fuga eaque eligendi soluta.
+      </p>
+      <a href="https://bennettfeely.com/clippy/" class="button-cta"
+        >Start booking</a
+      >
+    </section>
     <div class="example">
       <div class="example__picture">
         <div class="picture-onPage">
@@ -115,5 +126,17 @@
       </p>
       <h2 class="header header__small">- Ellissa L.</h2>
     </div>
+    <section class="discover bkg-pic">
+      <div class="small-box">
+        <h3 class="header header__normal center">Book your discovery call</h3>
+        <p class="center">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Error
+          praesentium quis officia dicta, excepturi vel quos perferendis dolor?
+        </p>
+        <a href="https://bennettfeely.com/clippy/" class="button-cta"
+          >Start booking</a
+        >
+      </div>
+    </section>
   </body>
 </html>
