--- a/index.html
+++ b/index.html
@@ -138,5 +138,26 @@
         >
       </div>
     </section>
+    <footer class="footer">
+      <div class="footer__box footer__box-1">
+        <img src="./images/logo--3.svg" alt="road trip logo" />
+      </div>
+      <div class="footer__box footer__box-2">
+        <a href="#" class="link">about</a>
+        <a href="#" class="link">travel services</a>
+        <a href="#" class="link">asigurari</a>
+        <a href="#" class="link">info</a>
+      </div>
+      <div class="footer__box footer__box-3">
+        <a href="#" class="link">contact us</a>
+        <a href="#" class="link">blog</a>
+        <a href="#" class="link">privacy policy</a>
+        <a href="#" class="link">safe spams</a>
+      </div>
+    </footer>
+    <div class="legal">
+      <h4 class="header header__small">©2021 - All rights are reserved</h4>
+      <h4 class="header header__small">WEBDESIGN by al.webdesign</h4>
+    </div>
   </body>
 </html>
