--- a/index.html
+++ b/index.html
@@ -119,12 +119,46 @@
     </div>
     <div class="reviews">
       <h3 class="header header__hand center">Happy travelers</h3>
-      <p class="center margin-y">
-        "We've seen amazing results already. Needless to say we are extremely
-        satisfied with the results. Travel is worth much more than I paid. I
-        could probably go into sales for you."
-      </p>
-      <h2 class="header header__small">- Ellissa L.</h2>
+      <div class="reviews__container">
+        <img
+          src="./icons/arrow--left.svg"
+          alt=""
+          class="button-carousel"
+          id="btn--left"
+        />
+        <div class="reviews__box">
+          <p class="center margin-y">
+            "We've seen amazing results already. Needless to say we are
+            extremely satisfied with the results. Travel is worth much more than
+            I paid. I could probably go into sales for you."
+          </p>
+          <h2 class="header header__small">- Ellissa L.</h2>
+        </div>
+        <div class="reviews__box">
+          <p class="center margin-y">
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Assumenda
+            libero delectus minus itaque quasi dignissimos alias in suscipit
+            laboriosam reprehenderit. Facere corporis facilis, tempora esse
+            similique ratione repellat maxime debitis.
+          </p>
+          <h2 class="header header__small">- Maria A.</h2>
+        </div>
+        <div class="reviews__box">
+          <p class="center margin-y">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos ut
+            voluptate quasi ipsum aspernatur suscipit et deleniti cum vero sunt
+            voluptatem natus dolorem sapiente totam culpa reprehenderit,
+            dignissimos inventore labore.
+          </p>
+          <h2 class="header header__small">- Mark F.</h2>
+        </div>
+        <img
+          src="./icons/arrow--right.svg"
+          alt=""
+          class="button-carousel"
+          id="btn--right"
+        />
+      </div>
     </div>
     <section class="discover bkg-pic">
       <div class="small-box">
