--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
           consectetur tempora quam sapiente. Ab accusamus itaque deleniti
           provident velit at expedita inventore laborum quaerat.
         </p>
-        <button class="button-readmore">Read more</button>
+        <button class="button-readmore" id="btn-more-example">Read more</button>
       </div>
     </div>
     <div class="reviews">
@@ -191,16 +191,16 @@
     </div>
 
     <div class="modal hidden" id="modalAbout">
-      <div class="modal__about">
-        <div class="modal__about__nav">
+      <div class="modal__container">
+        <div class="modal__navigation">
           <img
             src="./icons/btn-x.svg"
             alt=""
             class="button-x"
-            id="btn-closeModal"
+            id="btn-closeModalAbout"
           />
         </div>
-        <div class="modal__about__container">
+        <div class="modal__box">
           <img src="./images/wallpaper--4.jpg" alt="nature" />
           <h2 class="header header__normal">
             Montains, hiking and stuning locations.
@@ -239,6 +239,66 @@
             earum velit ratione esse cumque doloribus aliquam, tempora quo
             molestiae quidem maiores debitis repellendus nobis architecto modi
             accusantium quam numquam.
+          </p>
+        </div>
+      </div>
+    </div>
+    <!-- MODAL EXAMPLE -->
+    <div class="modal hidden" id="modalExample">
+      <div class="modal__container">
+        <div class="modal__navigation">
+          <img
+            src="./icons/btn-x.svg"
+            alt=""
+            class="button-x"
+            id="btn-closeModalExample"
+          />
+        </div>
+        <div class="modal__box">
+          <img src="./images/wallpaper--6.jpg" alt="nature" />
+          <h2 class="header header__normal">
+            LOREM IPSUM DOLOR SIT AMET CONSECTETUR.
+          </h2>
+          <p class="margin-y">
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quos vero
+            alias amet repudiandae harum similique rerum aliquam, quibusdam nemo
+            perferendis, pariatur vitae aspernatur reiciendis nobis ea
+            asperiores mollitia provident reprehenderit vel odit, perspiciatis
+            et corporis earum. Repellat eos necessitatibus minima expedita ad
+            aspernatur, tempore libero modi, mollitia rem minus eius. Sequi,
+            eligendi saepe repellendus impedit perferendis iure, tempora
+            veritatis adipisci corrupti eos quibusdam modi itaque dolor! Vero
+            tempora natus officia ab laudantium enim dolore expedita quaerat
+            numquam. Ullam, quod officia!
+          </p>
+          <p class="margin-y">
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Placeat
+            eligendi, quasi rem debitis quaerat delectus esse maiores! Nemo
+            excepturi praesentium earum magnam! Nam accusamus exercitationem
+            voluptatibus rerum maiores quis consectetur, quam amet numquam
+            facilis, fugit eos odit eum tempore quas dignissimos maxime animi
+            eius nesciunt dolor inventore aliquid quos velit! Ipsa illum
+            possimus iusto suscipit.
+          </p>
+          <p class="margin-y">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem,
+            dignissimos? Nulla quam laudantium corporis eligendi iure nostrum
+            officiis eveniet dolore modi vero distinctio nemo repellendus totam,
+            culpa et! Itaque, quam magni quasi cupiditate porro quibusdam quia
+            quidem doloremque eligendi earum aperiam consequatur commodi nam
+            velit labore? Modi explicabo obcaecati beatae veritatis aut. Ratione
+            molestias repellendus corrupti error laborum dolorum rerum, sit
+            delectus maxime, obcaecati inventore distinctio eveniet nesciunt.
+          </p>
+          <p class="margin-y">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem,
+            dignissimos? Nulla quam laudantium corporis eligendi iure nostrum
+            officiis eveniet dolore modi vero distinctio nemo repellendus totam,
+            culpa et! Itaque, quam magni quasi cupiditate porro quibusdam quia
+            quidem doloremque eligendi earum aperiam consequatur commodi nam
+            velit labore? Modi explicabo obcaecati beatae veritatis aut. Ratione
+            molestias repellendus corrupti error laborum dolorum rerum, sit
+            delectus maxime, obcaecati inventore distinctio eveniet nesciunt.
           </p>
         </div>
       </div>
