trip login btn v3

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <a href="#" class="button-link">location</a>
       <a href="#" class="button-link">title</a>
       <a href="#" class="button-link">about</a>
-      <button class="button-menu">login</button>
+      <button class="button-menu">Account</button>
     </navigation>
     <section class="welcome bkg-pic">
       <div class="small-box">
