trip login btn v4

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <a href="#" class="button-link">location</a>
       <a href="#" class="button-link">title</a>
       <a href="#" class="button-link">about</a>
-      <button class="button-menu">Account</button>
+      <button class="button-menu" id="btn-account">Account</button>
     </navigation>
     <section class="welcome bkg-pic">
       <div class="small-box">
@@ -300,6 +300,18 @@
             molestias repellendus corrupti error laborum dolorum rerum, sit
             delectus maxime, obcaecati inventore distinctio eveniet nesciunt.
           </p>
+        </div>
+      </div>
+    </div>
+    <div class="modal-account hidden" id="modal-account">
+      <div class="modal-account__container">
+        <div class="modal-account__navigation">
+          <img
+            src="./icons/btn-x.svg"
+            alt=""
+            class="button-x"
+            id="btn-closeModalAccount"
+          />
         </div>
       </div>
     </div>
