--- a/index.html
+++ b/index.html
@@ -313,6 +313,27 @@
             id="btn-closeModalAccount"
           />
         </div>
+        <h3 class="header header__normal">Connect to your account</h3>
+        <div class="modal-account__buttons">
+          <button class="button-account button-active" id="button-login">
+            Log in
+          </button>
+          <button class="button-account" id="button-signup">Sign Up</button>
+        </div>
+        <div class="modal-account__login" id="box-login">
+          <form action="/">
+            <input type="text" placeholder="Your id..." />
+            <input type="password" placeholder="Your password..." />
+          </form>
+          <button class="button-connect" id="buttonConnect">Connect</button>
+        </div>
+        <div class="modal-account__login hidden" id="box-signup">
+          <form action="/">
+            <input type="text" placeholder="Type id" />
+            <input type="password" placeholder="Type password" />
+          </form>
+          <button class="button-connect" id="buttonRegister">Register</button>
+        </div>
       </div>
     </div>
   </body>
