trip login btn v8

--- a/index.html
+++ b/index.html
@@ -322,15 +322,15 @@
         </div>
         <div class="modal-account__login" id="box-login">
           <form action="/">
-            <input type="text" placeholder="Your id..." />
+            <input type="text" placeholder="Your username..." />
             <input type="password" placeholder="Your password..." />
           </form>
           <button class="button-connect" id="buttonConnect">Connect</button>
         </div>
         <div class="modal-account__login hidden" id="box-signup">
           <form action="/">
-            <input type="text" placeholder="Type id" />
-            <input type="password" placeholder="Type password" />
+            <input type="text" placeholder="Username" />
+            <input type="password" placeholder="Password" />
           </form>
           <button class="button-connect" id="buttonRegister">Register</button>
         </div>
