trip login layout v9

--- a/index.html
+++ b/index.html
@@ -313,7 +313,7 @@
             id="btn-closeModalAccount"
           />
         </div>
-        <h3 class="header header__normal">Connect to your account</h3>
+        <!-- <h3 class="header header__normal">Connect to your account</h3> -->
         <div class="modal-account__buttons">
           <button class="button-account button-active" id="button-login">
             Log in
