trip login layout v10

--- a/index.html
+++ b/index.html
@@ -342,6 +342,12 @@
           <form action="/">
             <input
               type="text"
+              placeholder="Name"
+              class="input"
+              id="input-signup-name"
+            />
+            <input
+              type="text"
               placeholder="Username"
               class="input"
               id="input-signup-username"
