trip menu buttons v1

--- a/index.html
+++ b/index.html
@@ -15,9 +15,7 @@
     <navigation class="navigation">
       <a href="#" class="button-link">offerts</a>
       <a href="#" class="button-link">location</a>
-      <a href="#" class="button-link">title</a>
-      <a href="#" class="button-link">about</a>
-      <button class="button-menu" id="btn-account">Account</button>
+      <button class="button-menu" id="btn-account">Login</button>
     </navigation>
     <section class="welcome bkg-pic">
       <div class="small-box">
@@ -175,7 +173,7 @@
       <div class="footer__box footer__box-2">
         <a href="#" class="link">about</a>
         <a href="#" class="link">travel services</a>
-        <a href="#" class="link">asigurari</a>
+        <a href="#" class="link">insurance</a>
         <a href="#" class="link">info</a>
       </div>
       <div class="footer__box footer__box-3">
@@ -187,7 +185,12 @@
     </footer>
     <div class="legal">
       <h4 class="header header__small">©2021 - All rights are reserved</h4>
-      <h4 class="header header__small">WEBDESIGN by al.webdesign</h4>
+      <h4 class="header header__small">
+        WEBDESIGN by
+        <a href="https://www.instagram.com/al.webdesign/" target="_blank"
+          >al.webdesign</a
+        >
+      </h4>
     </div>
 
     <div class="modal hidden" id="modalAbout">
@@ -316,7 +319,7 @@
         <!-- <h3 class="header header__normal">Connect to your account</h3> -->
         <div class="modal-account__buttons">
           <button class="button-account button-active" id="button-login">
-            Log in
+            Log In
           </button>
           <button class="button-account" id="button-signup">Sign Up</button>
         </div>
