trip menu buttons v3

--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
     <navigation class="navigation">
       <a href="#" class="button-link">offerts</a>
       <a href="#" class="button-link">location</a>
-      <button class="button-menu" id="btn-account">Login</button>
+      <button class="button-menu" id="btn-account">
+        <img src="./icons/user-circle-solid.svg" alt="login" />
+      </button>
     </navigation>
     <section class="welcome bkg-pic">
       <div class="small-box">
@@ -23,9 +25,7 @@
         <h2 class="header header__small center">
           mytrip.com - made travel for extraordinary life experiences
         </h2>
-        <a href="https://bennettfeely.com/clippy/" class="button-cta"
-          >Start booking</a
-        >
+        <a href="./pages/booking.html" class="button-cta">Start booking</a>
       </div>
     </section>
     <section class="about">
