trip menu button v1

--- a/pages/booking.html
+++ b/pages/booking.html
@@ -10,11 +10,15 @@
   </head>
   <body>
     <section class="logo">
-      <img src="../images/logo--3.svg" alt="road trip logo" />
+      <a href="../index.html"
+        ><img src="../images/logo--3.svg" alt="road trip logo" />
+      </a>
     </section>
     <navigation class="navigation">
-      <a href="#" class="button-link">offerts</a>
-      <a href="#" class="button-link">location</a>
+      <!-- <a href="#" class="button-link">offerts</a> -->
+      <button class="button-menu" id="no-id-yet">
+        <img src="../icons/shopping-cart-solid.svg" alt="schopping cart" />
+      </button>
       <button class="button-menu" id="btn-account">
         <img src="../icons/user-circle-solid.svg" alt="login" />
       </button>
