--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./src/style/main.scss" />
-    <script src="./src/javascript/app.js" defer></script>
+    <script src="./src/javascript/app.js" defer type="module"></script>
     <title>My trip</title>
   </head>
   <body>
