--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./src/style/main.scss" />
-    <script src="./src/javascript/app.js" defer type="module"></script>
+    <script src="./src/javascript/PageIndex.js" defer type="module"></script>
     <title>My trip</title>
   </head>
   <body>
@@ -310,6 +310,7 @@
         </div>
       </div>
     </div>
+    <!-- LOGIN or REGISTER -->
     <div class="modal-account hidden" id="modal-account">
       <div class="modal-account__container">
         <div class="modal-account__navigation">
@@ -371,5 +372,6 @@
         <div class="modal-account__registred hidden" id="box-registred"></div>
       </div>
     </div>
+    <!-- ////////////////////////////////////////////// -->
   </body>
 </html>
