trip shopping card v1

--- a/index.html
+++ b/index.html
@@ -15,13 +15,113 @@
       </a>
     </section>
     <navigation class="navigation">
-      <!-- <a href="#" class="button-link">Offerts</a> -->
-      <button class="button-menu" id="no-id-yet">
+      <button class="button-menu" id="buttonShopping">
         <img src="./icons/shopping-cart-solid.svg" alt="schopping cart" />
       </button>
       <button class="button-menu" id="btn-account">
         <img src="./icons/user-circle-solid.svg" alt="login" />
       </button>
+      <div class="navigation__dropdown hide-dropdown" id="navigation-dropdown">
+        <div class="navigation__header">
+          <h2 class="header header__normal">Checkout list</h2>
+        </div>
+        <div class="navigation__container">
+          <!-- box 1 -->
+          <div class="navigation__box">
+            <img
+              src="./images/booking-card--1.jpg"
+              alt="card"
+              class="navigation__box__img"
+            />
+            <div class="navigation__box__info">
+              <h5 class="header header__card">Eforie Sud</h5>
+              <h6 class="header header__desc">The best choice</h6>
+            </div>
+            <div class="navigation__box__price">
+              <h4 class="header header__price">299 €</h4>
+            </div>
+          </div>
+          <!-- //////////// -->
+          <div class="navigation__box">
+            <img
+              src="./images/booking-card--1.jpg"
+              alt="card"
+              class="navigation__box__img"
+            />
+            <div class="navigation__box__info">
+              <h5 class="header header__card">Eforie Sud</h5>
+              <h6 class="header header__desc">The best choice</h6>
+            </div>
+            <div class="navigation__box__price">
+              <h4 class="header header__price">299 €</h4>
+            </div>
+          </div>
+          <!-- //////////// -->
+          <div class="navigation__box">
+            <img
+              src="./images/booking-card--1.jpg"
+              alt="card"
+              class="navigation__box__img"
+            />
+            <div class="navigation__box__info">
+              <h5 class="header header__card">Eforie Sud</h5>
+              <h6 class="header header__desc">The best choice</h6>
+            </div>
+            <div class="navigation__box__price">
+              <h4 class="header header__price">299 €</h4>
+            </div>
+          </div>
+          <!-- //////////// -->
+          <div class="navigation__box">
+            <img
+              src="./images/booking-card--1.jpg"
+              alt="card"
+              class="navigation__box__img"
+            />
+            <div class="navigation__box__info">
+              <h5 class="header header__card">Eforie Sud</h5>
+              <h6 class="header header__desc">The best choice</h6>
+            </div>
+            <div class="navigation__box__price">
+              <h4 class="header header__price">299 €</h4>
+            </div>
+          </div>
+          <!-- //////////// -->
+          <div class="navigation__box">
+            <img
+              src="./images/booking-card--1.jpg"
+              alt="card"
+              class="navigation__box__img"
+            />
+            <div class="navigation__box__info">
+              <h5 class="header header__card">Eforie Sud</h5>
+              <h6 class="header header__desc">The best choice</h6>
+            </div>
+            <div class="navigation__box__price">
+              <h4 class="header header__price">299 €</h4>
+            </div>
+          </div>
+          <!-- //////////// -->
+          <div class="navigation__box">
+            <img
+              src="./images/booking-card--1.jpg"
+              alt="card"
+              class="navigation__box__img"
+            />
+            <div class="navigation__box__info">
+              <h5 class="header header__card">Eforie Sud</h5>
+              <h6 class="header header__desc">The best choice</h6>
+            </div>
+            <div class="navigation__box__price">
+              <h4 class="header header__price">299 €</h4>
+            </div>
+          </div>
+          <!-- //////////// -->
+        </div>
+        <div class="navigation__checkout">
+          <button class="button-readmore" id="nofnow">check out</button>
+        </div>
+      </div>
     </navigation>
     <section class="welcome bkg-pic">
       <div class="small-box">
