--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
           <!-- //////////// -->
         </div>
         <div class="navigation__checkout">
-          <button class="button-readmore" id="nofnow">check out</button>
+          <button class="button-checkout" id="nofnow">check out</button>
         </div>
       </div>
     </navigation>
