trip shopping card v5

--- a/index.html
+++ b/index.html
@@ -22,6 +22,14 @@
         <img src="./icons/user-circle-solid.svg" alt="login" />
       </button>
       <div class="navigation__dropdown hide-dropdown" id="navigation-dropdown">
+        <div class="navigation__x">
+          <img
+            src="./icons/btn-x.svg"
+            alt=""
+            class="button-x"
+            id="closeShoppingBox"
+          />
+        </div>
         <div class="navigation__header">
           <h2 class="header header__normal">Checkout list</h2>
         </div>
@@ -37,8 +45,11 @@
               <h5 class="header header__card">Eforie Sud</h5>
               <h6 class="header header__desc">The best choice</h6>
             </div>
-            <div class="navigation__box__price">
+            <div class="navigation__box__price hidden">
               <h4 class="header header__price">299 €</h4>
+            </div>
+            <div class="navigation__box__close">
+              <h1>X</h1>
             </div>
           </div>
           <!-- //////////// -->
@@ -55,20 +66,8 @@
             <div class="navigation__box__price">
               <h4 class="header header__price">299 €</h4>
             </div>
-          </div>
-          <!-- //////////// -->
-          <div class="navigation__box">
-            <img
-              src="./images/booking-card--1.jpg"
-              alt="card"
-              class="navigation__box__img"
-            />
-            <div class="navigation__box__info">
-              <h5 class="header header__card">Eforie Sud</h5>
-              <h6 class="header header__desc">The best choice</h6>
-            </div>
-            <div class="navigation__box__price">
-              <h4 class="header header__price">299 €</h4>
+            <div class="navigation__box__close">
+              <h1>X</h1>
             </div>
           </div>
           <!-- //////////// -->
@@ -85,41 +84,16 @@
             <div class="navigation__box__price">
               <h4 class="header header__price">299 €</h4>
             </div>
-          </div>
-          <!-- //////////// -->
-          <div class="navigation__box">
-            <img
-              src="./images/booking-card--1.jpg"
-              alt="card"
-              class="navigation__box__img"
-            />
-            <div class="navigation__box__info">
-              <h5 class="header header__card">Eforie Sud</h5>
-              <h6 class="header header__desc">The best choice</h6>
-            </div>
-            <div class="navigation__box__price">
-              <h4 class="header header__price">299 €</h4>
-            </div>
-          </div>
-          <!-- //////////// -->
-          <div class="navigation__box">
-            <img
-              src="./images/booking-card--1.jpg"
-              alt="card"
-              class="navigation__box__img"
-            />
-            <div class="navigation__box__info">
-              <h5 class="header header__card">Eforie Sud</h5>
-              <h6 class="header header__desc">The best choice</h6>
-            </div>
-            <div class="navigation__box__price">
-              <h4 class="header header__price">299 €</h4>
+            <div class="navigation__box__close">
+              <h1>X</h1>
             </div>
           </div>
           <!-- //////////// -->
         </div>
         <div class="navigation__checkout">
-          <button class="button-checkout" id="buttonCheckOut">check out</button>
+          <button class="button-checkout" id="buttonCheckOut">
+            continue to payment
+          </button>
         </div>
       </div>
     </navigation>
